# django-chatbot

./: .gitignore  Dockerfile  Procfile  README.md  app.json  docker-compose.yml  pyproject.toml  requirements.txt
.do/: app.yaml  app.yml  deploy.template.yaml
app/: apps.py  consumers.py  forms.py  routing.py  tasks.py  urls.py  views.py
app/templates/app/: calc.html  index.html
chat/: consumers.py  forms.py  routing.py  tasks.py  tests.py  urls.py  views.py
chat/templates/: base.html
chat/templates/chat/: chat.html
project/: asgi.py  celery.py  routing.py  settings.py  urls.py  wsgi.py
