[tool.poetry]
name = "django-chatbot"
version = "0.1.0"
description = "Update to Django 3.1.5 and Channels 3.0.3"
authors = ["Roman Yaniev r0m4r0m4n@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
whitenoise = "^5.2.0"
redis = "^3.5.3"
psycopg2-binary = "^2.8.6"
celery = "^5.0.5"
channels-redis = "^3.2.0"
channels = "^3.0.3"
daphne = "^3.0.1"
dj-database-url = "^0.5.0"
django-redis = "^4.12.1"
Django = "^3.1.5"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
